# seahorn

./: .clang-format  .commitlintrc.cjs  .conform.yaml  .dir-locals.el  .dockerignore  .gitignore  .pre-commit-config.yaml  .travis.yml  CLion-IDE-Config.md  CLion-configuration.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Clion-configuration.md  Dockerfile  README.md  azure-pipelines.yml  contributors.txt  default-jammy.json  license.txt  pldi07.c  pldi07.ll
lib/: CMakeLists.txt
lib/Analysis/: ApiAnalysisPass.cc  CMakeLists.txt  CallApiPass.cc  CanAccessMemory.cc  CanFail.cc  CanReadUndef.cc  ClassHierarchyAnalysis.cc  ControlDependenceAnalysis.cc  CrabAnalysis.cc  CutPointGraph.cc  GateAnalysis.cc  SeaBuiltinsInfo.cc  SeaNewPmAnalyses.cc  StaticTaint.cc  TopologicalOrder.cc  WeakTopologicalOrder.cc
lib/Support/: BoostException.cc  CFGPrinter.cc  CMakeLists.txt  DSAInfo.cc  GitSHA1.cc  GitSHA1.cpp.in  Profiler.cc  SeaDebug.cc  SeaLog.cc  SortTopo.cc  Stats.cc
lib/Transforms/: CMakeLists.txt
lib/avy/: AvyDebug.cc  CMakeLists.txt  SeaDebug.cc
lib/passes/: BufferBoundsCheck.cc  CMakeLists.txt  CanAccessMemory.cc  CanFail.cc  CutPointGraph.cc  DummyExitBlock.cc  IkosIndVarSimplify.cc  IntegerOverflowCheck.cc  Local.cc  LoopUnhoist.cc  LowerCstExpr.cc  LowerGvInitializers.cc  MarkInternalInline.cc  MixedSemantics.cc  NameValues.cpp  PromoteVerifierCalls.cc  RemoveUnreachableBlocksPass.cc  SeahornMain.cpp  ShadowBufferBoundsCheckFuncPars.cc  ShadowMemDsa.cc  TopologicalOrder.cc
lib/seahorn/: BMCFunction.cc  BMCModule.cc  Bmc.cc  BmcPass.cc  BoogieWriter.cc  BvInt.cc  BvOpSem.cc  BvOpSem2.cc  BvOpSem2Allocators.cc  BvOpSem2Allocators.hh  BvOpSem2Alu.cc  BvOpSem2ConstEval.cc  BvOpSem2Context.hh  BvOpSem2ExtraWideMemMgr.cc  BvOpSem2ExtraWideMemMgr.hh  BvOpSem2FatMemMgr.cc  BvOpSem2FatMemMgr.hh  BvOpSem2Mem.cc  BvOpSem2MemManager.cc  BvOpSem2MemManagerMixin.hh  BvOpSem2MemRepr.cc  BvOpSem2MemRepr.hh  BvOpSem2RawMemMgr.cc  BvOpSem2RawMemMgr.hh  BvOpSem2TrackingRawMemMgr.cc  BvOpSem2TrackingRawMemMgr.hh  BvOpSem2WideMemManagerMixin.cc  BvOpSem2WideMemManagerMixin.hh  BvOpSem2WideMemMgr.cc  BvOpSem2WideMemMgr.hh  BvOpSem3.cc  BvOpSem3Mem.cc  BvOpsem2WideMemMgr.cc  BvSymExec.cc  CMakeLists.txt  CexExeGenerator.cc  CexHarness.cc  ClpOpSem.cc  ClpSymExec.cc  ClpWrite.cc  (+47 more)
py/: CMakeLists.txt  LogManager.py  bench_analysis.py  gcc_seahorn.py  inc_looper.py  only_z3.py  sea.py.off  sea_par.py  sea_setup.py  seahorn-benchexec-wrapper.py  seahorn_feas.py  seahorn_inter.py  seahorn_par_feas.py  seapy  setup.py.in  stats.py  z3_utils.py
py/inc/: LogManager.py  inc.py  par_inc.py
py/par_abc/: par_abc.py
py/sea/: CliCmd.py  __init__.py  __main__.py  abc.py  cex.py  commands.py  core.py  program.py  seacmds.py  stats.py  util.py  yama.py
py/term/: program.py  termination.py
sea-rt/: CMakeLists.txt  README.md  seahorn.c  seahorn.cpp  seahorn_mem.cpp
test/: .clang-format  CMakeLists.txt  Makefile  lit.cfg  readme.md  sudo-code
test/abc/: abc.c  abc2.c  abc3.c  abc4.c  encoding-ex-1.c  encoding-ex-2.c  lit.cfg  test-1-false.c  test-1-true.c  test-10-false.c  test-10-true.c  test-11-true.c  test-12-false.c  test-12-true.c  test-13-false.c  test-13-true.c  test-14-true.c  test-15-true.cpp  test-16-true.cpp  test-17-false.c  test-17-true.c  test-18-true.cpp  test-2-false.c  test-2-true.c  test-20-false.cpp  test-20-true-surface.cpp  test-20-true.cpp  test-3-false.c  test-3-true.c  test-30.c  test-4-false.c  test-4-true.c  test-5-false.c  test-5-true.c  test-6-false.1.c  test-6-false.2.c  test-6-false.3.c  test-6-false.4.c  test-6-true.c  test-7.true.c  (+6 more)
test/bmc/: cdaudio_simpl1_false-unreach-call_true-termination.cil.c  cdaudio_simpl1_true-unreach-call_true-termination.cil.c  diskperf_simpl1_true-unreach-call_true-termination.cil.c  floppy_simpl3_false-unreach-call_true-termination.cil.c  floppy_simpl3_true-unreach-call_true-termination.cil.c  floppy_simpl4_false-unreach-call_true-termination.cil.c  floppy_simpl4_true-unreach-call_true-termination.cil.c  kbfiltr_simpl1_true-unreach-call_true-termination.cil.c  kbfiltr_simpl2_false-unreach-call_true-termination.cil.c  kbfiltr_simpl2_true-unreach-call_true-termination.cil.c  test-bmc-1.false.c  test-bmc-1.true.c  test-bmc-2.false.c  test-bmc-2.true.c  test-bmc-3.false.c  test-bmc-3.true.c  test-bmc-diamond-1.false.c  test-bmc-diamond-1.true.c  test-bmc-diamond-2.false.c  test-bmc-diamond-2.true.c
test/branch_sentinel/: lit.cfg  test1.c  test2.c  test3.c
test/cex/: cex_mem.c  cex_mem.new.c  cex_mem_fail.c  cex_nonlinear_arith.c  cex_nonlinear_arith.fail.c  cex_nonlinear_arith.new.c  lit.local.cfg  mem_multi.c  mem_nd_size.c  mem_no_repeat.c
test/cha/: test_00.cpp  test_01.cpp  test_02.cpp  test_03.cpp  test_04.cpp
test/crab/: crab_1.c  crab_2.c  crab_3.c  crab_is_deref_1.c  crab_is_deref_2.c  crab_is_deref_3.c  crab_rng_1.c
test/devirt/: devirt_01.c  devirt_02.c  devirt_03.c  devirt_03.false.c  devirt_04.c  devirt_05.c  devirt_06.c  devirt_07.c  devirt_08.c  devirt_09.c  devirt_10.cpp  devirt_cha_00.cpp  devirt_cha_00.false.cpp  devirt_cha_01.cpp  devirt_cha_01.false.cpp  devirt_cha_02.cpp  devirt_cha_02.false.cpp  devirt_cha_03.cpp  devirt_cha_03.false.cpp  devirt_cha_04.cpp  devirt_cha_04.false.cpp  lit.local.cfg
test/dsa/: Makefile  README.md  check_graphs.py  globals.ll  int2ptr.ll  lit.cfg  params.ll  phi.ll  structs.local.ll  test-1.ci.c  test-1.cs.c  test-1.global.c.NOTEST  test-2.ci.c  test-2.cs.c  test-3.c.NOTEST  test-4.cpp.NOTEST
test/fat_ptr/: fat_ptr_outofbounds.01.c  fat_ptr_outofbounds.02.c  lit.local.cfg
test/fat_ptr_symbolic/: fat_ptr_get_set_test.ll  fat_ptr_get_set_test_unsat.ll  fat_ptr_outofbounds_01_sat.ll  fat_ptr_outofbounds_02_unsat.ll  lit.cfg  (+5 more)
units/: CMakeLists.txt  EvaluateTests.cpp  HexDumpTests.cpp  TypeCheckerTests.cpp  fapp_z3.cpp  fp_units.cc  lambdas_z3.cpp  muz_test.cpp  sea_doctest.hh  units_arm.cpp  units_expr.cpp  units_finite_maps.cpp  units_finite_maps_trans.cpp  units_fmap.cpp  units_fmap_chc.cpp  units_store_map.cpp  units_yices2.cpp  units_z3.cpp  units_z3_api.cpp
(+977 files in other folders)
